--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 </head>
 <body>
     <div class="hero">
-        <div class="title">Landing Page</div>
-        <ul>
-            <li>Menu 1</li>
-            <li>Menu 2</li>
-            <li>Menu 3</li>
-        </ul>
+        <div class="upper">
+            <div class="title">Landing Page</div>
+            <ul>
+                <li>Menu 1</li>
+                <li>Menu 2</li>
+                <li>Menu 3</li>
+            </ul>
+        </div>
+        <div class="headline">
+            <div class="hl_text">
+                <h1>Random Title</h1>
+                <p>weiter im Text</p>
+            </div>
+            <div class="hl_img">Place Image Here</div>
+        </div>
     </div>
     <div class="content"></div>
     <div class="footer"></div>
