Finished Responsive Navbar
- Navbar is now more responsive than before. Added more divs to normalise the situation
- Added new subhero div for the content inside hero
- added some style elements to p, h1, h2

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 </head>
 <body>
     <div class="hero">
-        <div class="upper">
+        <div class="navigation">
             <div class="title">Landing Page</div>
             <ul>
-                <li>Menu 1</li>
-                <li>Menu 2</li>
-                <li>Menu 3</li>
+                <li>Menu</li>
+                <li>Menu</li>
+                <li>Menu</li>
             </ul>
         </div>
-        <div class="headline">
-            <div class="hl_text">
-                <h1>Random Title</h1>
-                <p>weiter im Text</p>
+        <div class="subhero">
+            <div class="herocontent">
+                <div class="contentleft">
+                    <h2>Title</h2>
+                </div>
+                <div class="contentright"><div class="placeholderimg">Foto</div></div>
             </div>
-            <div class="hl_img">Place Image Here</div>
         </div>
     </div>
     <div class="content"></div>
