Finished Hero of Landing Page
- Added all flex items and designed the button for presentation.
- Fixed overflow behaviour

--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
             </ul>
         </div>
         <div class="subhero">
-            <div class="herocontent">
-                <div class="contentleft">
-                    <h2>Title</h2>
-                </div>
-                <div class="contentright"><div class="placeholderimg">Foto</div></div>
+            <div class="contentleft">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                <button>Sign up</button>
             </div>
+            <div class="contentright">Place Image Here</div>
         </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <div class="container1">
+            <h3>Some Random Information.</h3>
+        </div>
+        <div class="container2"></div>
+        <div class="container3"></div>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
