added calltoaction and finished assignment
- Wrapped caltoaction in container3
- display:flex calltoaction class with unordered list inside
- added better specification for button element so it becomes better reusable
- finished Quote block and added dorem ipsum text as inspiration
- The site has become very fluid and can be resized accordingly

--- a/index.html
+++ b/index.html
@@ -38,8 +38,21 @@
                 <div class="cube">random 5</div>
             </div>
         </div>
-        <div class="container2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</div>
-        <div class="container3"></div>
+        <div class="container2">
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
+            <p class="quote">- Mahatma Gandhi</p>
+        </div>
+        <div class="container3">
+            <div class="calltoaction">
+                <ul>
+                    <li><h4>Call to Action</h4>
+                        <p>This Site wants to call you for action in a blue container with white fonts and a button</p>
+                    </li>
+                    <li><button>Sign Up</button></li>
+                    
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="footer">CopyRight # Tinembart-Sudo</div>
 </body>
